feat(10): unify package API CLI and Passport version
